# agentic-langgraph-ps-course

./: .gitignore  AGENTS.md  PROMPT.md  README.md  main.py  pyproject.toml
01/demos/Module1/: README.md  README.txt  clip2_1_email_workflow.py  clip3_1_email_visualize.py  clip3_2_email_visualize_notebook.ipynb  clip4_1_email_check_state_id.py  clip6_1_email_overwrite.py  clip6_2_email_manual_accumalation.py  clip6_3_email_reducer.py  clip6_4_email_reducer_add.py  clip6_5_health_reducer.py  clip6_6_custom_reducers.py  clip6_7_add_messages.py  requirements.txt
02/demos/Module2/: .env  .env.template  clip1_1_sequential.py  clip2_1_parallel.py  clip3_1_parallel_reducers.py  clip4_1_conditional.py  clip4_2_returning_labels.py  clip5_1_iterative.py  clip6_1_evaluator.py  clip6_2_evaluator_improved.py  list_models.py  requirements.txt
03/demos/Module3/: .env.template  Clip1_1_chatbot_single_turn.py  Clip1_2_chatbot_multi_turn.py  Clip2_1_manual_tool_calling.py  Clip2_2_llm_tool_calling.py  Clip3_1_chatbot_with_tools.py  Clip4_1_react.py  Clip4_2_react_final_response.py  Clip5_1_create_agent.py  Clip6_1_multi_agent.py  requirements.txt
04/demos/Module4/: Clip4_1_inmemorySaver.ipynb  Clip5_1_sqliteSaver.ipynb  Clip5_2_sqliteSaver.py  Clip6_1_chatbot.py  Clip6_2_chatbot_memory.py  Clip7_1_fault_tolerance.py  requirements.txt
05/demos/Module5/: clip2_1_time_travel.ipynb  clip5_1_tweet_approval.py  clip6_1_tweet_feedback.py  clip7_1_conditional_edges.py  clip7_2_Command_routing.py  clip7_3_routing_update.py  clip7_4_command_approval.py  clip7_5_command_feedback.py  (+3 more)
(+18 files in other folders)
